--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ElodieENSTA/metadatax-react",
+  "name": "@PAM-Standardization/metadatax-ts",
   "version": "1.0.0",
   "description": " Metadatax server usage  in Typescript",
   "main": "dist/cjs/index.js",
@@ -10,6 +10,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "rollup": "rollup -c",
+    "rollup-dev": "rollup -c -w",
     "test": "exit 0"
   },
   "publishConfig": {
@@ -17,14 +18,23 @@
   },
   "author": "",
   "license": "ISC",
+  "peerDependencies": {
+    "leaflet": "^1.7.1",
+    "leaflet.markercluster": "^1.5.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/node": "^22.5.4",
     "@types/react": "^17.0.34",
-    "react": "^17.0.2",
     "rollup": "^4.21.2",
     "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "typescript": "^4.4.4"
   }
 }
