--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -28,7 +28,8 @@ jobs:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
-      - run: npm rollup
+      - run: npm install
+      - run: npm run rollup
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
