--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,35 +1,26 @@
-name: Node.js Package
-
+name: Publish Package to npmjs
 on:
+  push:
+    branches: [ master ]
   release:
-    types: [created]
-
+    types: [published]
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v4
+      # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
       - run: npm ci
       - run: npm test
-
-  publish-gpr:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 16
-          registry-url: https://npm.pkg.github.com/
-      - run: npm ci
       - run: npm install
       - run: npm run rollup
-      - run: npm publish
+      - run: npm publish --provenance --access public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
