--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@PAM-Standardization/metadatax-ts",
+  "name": "metadatax-ts",
   "version": "1.0.3",
   "description": " Metadatax server usage  in Typescript",
   "main": "dist/cjs/index.js",
@@ -12,9 +12,6 @@
     "rollup": "rollup -c",
     "dev": "rollup -c -w",
     "test": "exit 0"
-  },
-  "publishConfig": {
-    "@YOUR-USERNAME:registry": "https://npm.pkg.github.com"
   },
   "author": "",
   "license": "ISC",
