--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "metadatax-ts",
+  "name": "@pam-standardization/metadatax-ts",
   "version": "1.0.3",
-  "description": " Metadatax server usage  in Typescript",
+  "description": "Metadatax server usage  in Typescript",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
@@ -12,6 +12,10 @@
     "rollup": "rollup -c",
     "dev": "rollup -c -w",
     "test": "exit 0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PAM-Standardization/metadatax-ts.git"
   },
   "author": "",
   "license": "ISC",
